--- a/style.css
+++ b/style.css
@@ -6,43 +6,43 @@
 */
 
 @font-face {
-  font-family: 'Latin Modern';
+  font-family: "Latin Modern";
   font-style: normal;
   font-weight: normal;
   font-display: swap;
-  src: url('./fonts/LM-regular.woff2') format('woff2'),
-    url('./fonts/LM-regular.woff') format('woff'),
-    url('./fonts/LM-regular.ttf') format('truetype');
+  src: url("./fonts/LM-regular.woff2") format("woff2"),
+    url("./fonts/LM-regular.woff") format("woff"),
+    url("./fonts/LM-regular.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Latin Modern';
+  font-family: "Latin Modern";
   font-style: italic;
   font-weight: normal;
   font-display: swap;
-  src: url('./fonts/LM-italic.woff2') format('woff2'),
-    url('./fonts/LM-italic.woff') format('woff'),
-    url('./fonts/LM-italic.ttf') format('truetype');
+  src: url("./fonts/LM-italic.woff2") format("woff2"),
+    url("./fonts/LM-italic.woff") format("woff"),
+    url("./fonts/LM-italic.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Latin Modern';
+  font-family: "Latin Modern";
   font-style: normal;
   font-weight: bold;
   font-display: swap;
-  src: url('./fonts/LM-bold.woff2') format('woff2'),
-    url('./fonts/LM-bold.woff') format('woff'),
-    url('./fonts/LM-bold.ttf') format('truetype');
+  src: url("./fonts/LM-bold.woff2") format("woff2"),
+    url("./fonts/LM-bold.woff") format("woff"),
+    url("./fonts/LM-bold.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Latin Modern';
+  font-family: "Latin Modern";
   font-style: italic;
   font-weight: bold;
   font-display: swap;
-  src: url('./fonts/LM-bold-italic.woff2') format('woff2'),
-    url('./fonts/LM-bold-italic.woff') format('woff'),
-    url('./fonts/LM-bold-italic.ttf') format('truetype');
+  src: url("./fonts/LM-bold-italic.woff2") format("woff2"),
+    url("./fonts/LM-bold-italic.woff") format("woff"),
+    url("./fonts/LM-bold-italic.ttf") format("truetype");
 }
 
 /* Box sizing rules */
@@ -76,7 +76,7 @@ html {
 }
 
 body {
-  font-family: 'Latin Modern', Georgia, Cambria, 'Times New Roman', Times, serif;
+  font-family: "Latin Modern", Georgia, Cambria, "Times New Roman", Times, serif;
   line-height: 1.8;
 
   max-width: 80ch;
@@ -149,7 +149,7 @@ article > * + * {
 code,
 pre,
 kbd {
-  font-family: Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
+  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
     monospace;
   font-size: 85%;
 }
@@ -186,11 +186,11 @@ table {
   counter-increment: caption;
 }
 /* add bottom border on column table headings  */
-table tr > th[scope='col'] {
+table tr > th[scope="col"] {
   border-bottom: 1.36px solid black;
 }
 /* add right border on row table headings  */
-table tr > th[scope='row'] {
+table tr > th[scope="row"] {
   border-right: 1.36px solid black;
 }
 table > tbody > tr:first-child > td,
@@ -219,7 +219,7 @@ caption {
 }
 
 caption::before {
-  content: 'Table ' counter(caption) '. ';
+  content: "Table " counter(caption) ". ";
   font-weight: bold;
 }
 
@@ -239,6 +239,10 @@ h1:first-child {
   text-align: center;
 }
 
+h2:first-child {
+  text-align: center;
+}
+
 /* Nested ordered list for ToC */
 nav ol {
   counter-reset: item;
@@ -248,7 +252,7 @@ nav li {
   display: block;
 }
 nav li:before {
-  content: counters(item, '.') ' ';
+  content: counters(item, ".") " ";
   counter-increment: item;
   padding-right: 0.85rem;
 }
@@ -266,7 +270,7 @@ dl dd {
   font-style: italic;
 }
 .theorem::before {
-  content: 'Theorem ' counter(theorem) '. ';
+  content: "Theorem " counter(theorem) ". ";
   font-weight: bold;
   font-style: normal;
 }
@@ -279,7 +283,7 @@ dl dd {
   font-style: italic;
 }
 .lemma::before {
-  content: 'Lemma ' counter(theorem) '. ';
+  content: "Lemma " counter(theorem) ". ";
   font-weight: bold;
   font-style: normal;
 }
@@ -292,11 +296,11 @@ dl dd {
   position: relative;
 }
 .proof::before {
-  content: 'Proof. ' attr(title);
+  content: "Proof. " attr(title);
   font-style: italic;
 }
 .proof:after {
-  content: '◾️';
+  content: "◾️";
   position: absolute;
   right: -12px;
   bottom: -2px;
@@ -310,7 +314,7 @@ dl dd {
   font-style: normal;
 }
 .definition::before {
-  content: 'Definition ' counter(definition) '. ';
+  content: "Definition " counter(definition) ". ";
   font-weight: bold;
   font-style: normal;
 }
@@ -342,7 +346,7 @@ dl dd {
 /* (WIP) add border when a sidenote is clicked on */
 .sidenote:target {
   border: hsl(55, 55%, 70%) 1.5px solid;
-  padding: 0 .5rem;
+  padding: 0 0.5rem;
   scroll-margin-block-start: 10rem;
 }
 
@@ -367,7 +371,7 @@ dl dd {
 
 /* add number in front of the sidenote */
 .sidenote-number ~ .sidenote::before {
-  content: counter(sidenote-counter) ' ';
+  content: counter(sidenote-counter) " ";
   font-size: 0.7rem;
   top: -0.5rem;
 }
@@ -381,7 +385,6 @@ blockquote .sidenote {
   margin-right: -24vw;
   width: 18vw;
 }
-
 
 label.sidenote-toggle {
   display: inline;
